@@ -8,4 +8,4 @@ For a complete list of the changes made from release to release, see the CHANGEL
 
 2.0.9 - September 2012
 ========================
-# This release focuses on greater HTML5 & PHP v5.4 compliance, additional embedded help/documentation links, & module upgrades
+# This release focuses on greater HTML5 & PHP v5.4 compliance, & module upgrades
